# kmms_prog

./: .gitignore
2025_10_08_first_app/: build_run.bat  main.cpp
2025_10_08_module_app/: build_module_app.sh  io.cpp  io.hpp  sortings.cpp  sortings.hpp
2025_12_03_menu/: build_run_module_app.bat  main.cpp  menu.h  menu_function.cpp  menu_items.cpp
longnumber/: CMakeLists.txt  build.bat
longnumber/src/: LongNumber.cpp  Longnumber.hpp
longnumber/test/: test_long_number.cpp
